--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Qbitz\\FreshmailerBundle": "src/Qbitz/"
+            "Qbitz": "src/"
         }
     }
 }
