--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "kriswallsmith/buzz": "dev-master"
+        "kriswallsmith/buzz": ">=0.15"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
